fix modal blurry text and icon in chrome only

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -878,8 +878,10 @@ newplugin-cont span,
 .melis-modal-cont .modal-content p{
     margin-bottom: 4px;
 }
-
-
+/* css hack fix causing blur modal chrome only */
+.modal.in .modal-dialog {
+    -webkit-filter: blur(0.00001px);
+}
 
 
 
